# autograder

./: .air.toml  .gitignore  .travis.yml  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  autograder.go  bower.json  config.yaml  config.yml  docker-compose.dev.yml  docker-compose.yml  dump.rdb  go.mod  go.sum  gulpfile.js  main.go  rate_limiter.go  server.go  test_case.yaml
.github/: Dockerfile
.github/workflows/: ci.yml
autograder/: autograder.go
cmd/server/: main.go
internal/api/: handlers.go  handlers_test.go  middleware.go  middleware_test.go  redis.go  server.go  spa_test.go  submission.go  submission_test.go
internal/config/: config.go  (+1 more)
marker/: Dockerfile  conf.tar  pyproject.toml  requirements.txt  test_case.go
marker/marker/: __init__.py  cli.py  grader.py  sandbox.py
marker/scripts/: __init__.py  __main__.py  context_manager.py  input.json  test.py
marker/scripts/tests/: pythagorean_theorem.py  test_marker.py
marker/scripts/tests/test_hello_world/: hello_world.py
marker/tests/: conftest.py  test_marker.py  test_sandbox.py
marker/tests/test_hello_world/: hello_world.py  input.json  output.json
marker/tests/test_pythagorean_theorem/: input.json  output.json  pythagorean_theorem.py
marker/tests/test_pythagorean_therom/: input.json  output.json
schema/: generate.sh  models.fbs
server/: http_server.go  index_handler.go  rate_limiter.go  server.go  upload_handler.go
templates/: error.html  index.html  result.html
test_cases/: __init__.py
web/: .prettierignore  deno.json  eslint.config.js  index.html  vite.config.ts
(+43 files in other folders)
